@@ -48,8 +48,12 @@ setup(name='z3c.etestbrowser',
           'Environment :: Web Environment',
           'Intended Audience :: Developers',
           'License :: OSI Approved :: Zope Public License',
-          'Programming Language :: Python',
+          'Programming Language :: Python :: 2',
           'Programming Language :: Python :: 2.7',
+          'Programming Language :: Python :: 3',
+          'Programming Language :: Python :: 3.6',
+          'Programming Language :: Python :: 3.7',
+          'Programming Language :: Python :: 3.8',
           'Natural Language :: English',
           'Operating System :: OS Independent',
           'Topic :: Internet :: WWW/HTTP',
@@ -68,6 +72,7 @@ setup(name='z3c.etestbrowser',
       install_requires=[
           'lxml >= 2.2',
           'setuptools',
+          'six',
           'zope.deferredimport',
           'zope.testbrowser >= 5.0',
       ],
