@@ -2,6 +2,9 @@
 envlist =
     flake8,
     py27,
+    py36,
+    py37,
+    py38,
     coverage,
 
 [testenv]
@@ -10,10 +13,10 @@ commands =
     zope-testrunner --test-path=src
 
 [testenv:coverage]
-basepython = python2.7
+basepython = python3.7
 commands =
     coverage run -m zope.testrunner --test-path=src {posargs:--auto-color -vv}
-    coverage report --fail-under=92
+    coverage report --show-missing --fail-under=93
 deps = coverage
 
 [testenv:flake8]
